<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Switch
        android:id="@+id/sound"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sound"
        android:textColor="@color/colorTextDark"
        app:layout_constraintEnd_toEndOf="@+id/contact"
        app:layout_constraintStart_toStartOf="@+id/contact"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/app"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/market"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prog" />

    <Button
        android:id="@+id/contact"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app" />

    <Switch
        android:id="@+id/vibration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/vibration"
        android:textColor="@color/colorTextDark"
        app:layout_constraintEnd_toEndOf="@+id/contact"
        app:layout_constraintStart_toStartOf="@+id/contact"
        app:layout_constraintTop_toBottomOf="@+id/sound" />

    <Switch
        android:id="@+id/classic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/classic"
        android:textColor="@color/colorTextDark"
        app:layout_constraintEnd_toEndOf="@+id/contact"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/contact"
        app:layout_constraintTop_toBottomOf="@+id/vibration" />

    <Switch
        android:id="@+id/prog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/prog"
        android:textColor="@color/colorTextDark"
        app:layout_constraintEnd_toEndOf="@+id/contact"
        app:layout_constraintStart_toStartOf="@+id/contact"
        app:layout_constraintTop_toBottomOf="@+id/classic" />

</androidx.constraintlayout.widget.ConstraintLayout>